# date-utils-static

./: .gitignore  CMakeLists.txt  CMakePresets.json  DoxyPress.json  LICENSE.txt  README.md  testEnvironments.json  vcpkg-configuration.json  vcpkg.json
docs/: index.html
docs/html/: annotated.html  classdate__utils_1_1strDateConverter-members.html  classdate__utils_1_1strDateConverter.html  classes.html  date-utils-static_8hpp_source.html  dir_d41d8cd98f00b204e9800998ecf8427e.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxypress.css  functions_all.html  functions_func.html  functions_vars.html  index.html  md_README.html  namespacedate__utils.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  navtreedata.js  navtreeindex0.js  pages.html
src/: CMakeLists.txt  date-utils-static.cpp
src/date-utils-static/: date-utils-static.cpp
src/date-utils-static/include/: date-utils-static.hpp
src/include/: date-utils-static.hpp
tests/: CMakeLists.txt  date-utils-static-tests.cpp
